# pyro

pyrod/src/run/: haskell.rs  mod.rs
pyromaniac/: Cargo.toml
pyromaniac/src/: main.rs
scripts/: mkrootfs.sh
scripts/images/: Dockerfile.haskell
